@@ -17,6 +17,7 @@ grass (7.0.0~rc1-1) UNRELEASED; urgency=medium
     - Remove unused license sections
   * Add patches for various typos.
   * Fix desktop file with patch instead of d/rules.
+  * Use minimal dh rules.
 
  -- Bas Couwenberg <sebastic@xs4all.nl>  Thu, 15 Jan 2015 01:15:41 +0100
 
